# owl

./: .gitignore  CMakeLists.txt  Makefile  readme
doc/: apendix.rst  concept.rst  core_rule.rst  encoding.rst  forward.rst  grammar_spec.rst  index.rst  index.yaml  intro.rst  scope.rst  self_spec.rst
include/owl/: builder.h  bytestream.h  doc.h  glexer.h  lexer.h  list.h  parser.h  symbol.h  tree.h  uss.h  ustr.h  utils.h  vector.h
include/textdoc/: builder.h  bytestream.h  doc.h  error.h  glexer.h  lexer.h  list.h  parser.h  symbol.h  tree.h  uss.h  ustr.h  utils.h  vector.h
src/: CMakeLists.txt
src/exe/: str-to-ascii.c  textdoc.c
src/owl/: builder.c  bytestream.c  doc.c  error.c  glexer.c  lexer.c  list.c  parser.c  symbol.c  tree.c  uss.c  ustr.c  utils.c  vector.c
src/test/: test-glexer.c  test-list.c  test-symbol.c  test-tree.c  test-ustr.c
src/textdoc/: builder.c  bytestream.c  doc.c  error.c  glexer.c  lexer.c  list.c  parser.c  symbol.c  tree.c  uss.c  ustr.c  utils.c  vector.c
trash/: CMakeLists.txt  ascii.txt  context-free-grammar-dfa.txt  index.td  index2.td  td_ustr.txt  textdoc.fg  textdoc.txt  utf8.txt  vim
