file(GLOB LIB_OWL_FILES owl/*.c)
add_library(owl-core SHARED ${LIB_OWL_FILES})

file(GLOB EXE_FILES exe/*.c)
foreach(EXE_FILE ${EXE_FILES})
        get_filename_component(EXE_DEST ${EXE_FILE} NAME_WE)
        add_executable(${EXE_DEST} ${EXE_FILE})
        target_link_libraries(${EXE_DEST} owl-core) 
endforeach()

file(GLOB TEST_FILES test/*.c)
foreach(TEST_FILE ${TEST_FILES})
        get_filename_component(TEST_DEST ${TEST_FILE} NAME_WE)
        add_executable(${TEST_DEST} ${TEST_FILE})
        target_link_libraries(${TEST_DEST} owl-core)
endforeach()
